panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_address_of_member_of_static_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_address_of_member_of_static_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_address_of_member_of_static_struct.c"
   (struct T~0
      (member x `int`)
      (member y `int`))
   (declaration static_struct~1 `struct T~0 complete`
      (braced
         42
         27))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration p~4 `ptr<int>`
            (addressof
               (dot y
                  (name static_struct~1 `struct T~0 complete`))))
         (return (deref (name p~4 `ptr<int>`))))))

----- stderr -----
