panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_array_of_struct_completed_in_array_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~1 `fn() -> void`
      (compound-statement
         (declaration xs~4 `array<struct X~3 complete; (sizeof `struct X~3 complete`)>` ∅)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu %zu\n")
               (sizeof `struct X~3 complete`)
               (sizeof (name xs~4 `array<struct X~3 complete; (sizeof `struct X~3 complete`)>`))))))
   (function-definition
      g~5 `fn() -> void`
      (compound-statement
         (struct X~7
            (member c `char`)
            (member x `int`))
         (declaration xs~8 `array<struct X~7 complete; (sizeof `struct X~7 complete`)>` ∅)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu %zu\n")
               (sizeof `struct X~7 complete`)
               (sizeof (name xs~8 `array<struct X~7 complete; (sizeof `struct X~7 complete`)>`))))))
   (function-definition
      main~9 `fn() -> int`
      (compound-statement
         (expression (call (name f~1 `fn() -> void`)))
         (expression (call (name g~5 `fn() -> void`))))))

----- stderr -----
