panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_array_of_struct_completed_in_array_decl_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl_2.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_array_of_struct_completed_in_array_decl_2.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~1 `fn() -> void`
      (compound-statement
         (declaration funcs~4 `array<typeof(`ptr<typeof(`fn() -> typeof(`ptr<struct X~3 complete>`)`)>`); (sizeof `struct X~3 complete`)>` (braced ∅))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu\n")
               (lengthof (name funcs~4 `array<typeof(`ptr<typeof(`fn() -> typeof(`ptr<struct X~3 complete>`)`)>`); (sizeof `struct X~3 complete`)>`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu\n")
               (sizeof (deref (call (subscript (name funcs~4 `array<typeof(`ptr<typeof(`fn() -> typeof(`ptr<struct X~3 complete>`)`)>`); (sizeof `struct X~3 complete`)>`) 0))))))))
   (function-definition
      g~5 `fn() -> void`
      (compound-statement
         (declaration funcs~8 `typeof(`array<typeof(`ptr<typeof(`fn() -> typeof(`ptr<struct X~7 complete>`)`)>`); (sizeof `struct X~7 complete`)>`)` (braced ∅))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu\n")
               (lengthof (name funcs~8 `typeof(`array<typeof(`ptr<typeof(`fn() -> typeof(`ptr<struct X~7 complete>`)`)>`); (sizeof `struct X~7 complete`)>`)`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu\n")
               (sizeof (deref (call (subscript (name funcs~8 `typeof(`array<typeof(`ptr<typeof(`fn() -> typeof(`ptr<struct X~7 complete>`)`)>`); (sizeof `struct X~7 complete`)>`)`) 0))))))))
   (function-definition
      main~9 `fn() -> int`
      (compound-statement
         (expression (call (name f~1 `fn() -> void`)))
         (expression (call (name g~5 `fn() -> void`))))))

----- stderr -----
