panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_assign_to_member_nested_static.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_assign_to_member_nested_static.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_assign_to_member_nested_static.c"
   (struct T~0
      (member x `int`))
   (declaration t~1 `struct T~0 complete`
      (braced
         42))
   (struct ∅~2
      (member x `int`)
      (member t `struct T~0 complete`))
   (declaration a~3 `struct ∅~2 complete`
      (braced
         123
         (braced
            42)))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (expression
            (assign
               (dot x
                  (name t~1 `struct T~0 complete`))
               27))
         (expression
            (assign
               (dot x
                  (dot t
                     (name a~3 `struct ∅~2 complete`)))
               5))
         (return
            (dot x
               (dot t
                  (name a~3 `struct ∅~2 complete`)))))))

----- stderr -----
