panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__test_assign_to_member_nested_via_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (struct T~2
            (member x `int`))
         (declaration t~3 `struct T~2 complete`
            (braced
               42))
         (expression
            (assign
               (dot x
                  (name t~3 `struct T~2 complete`))
               27))
         (struct U~4
            (member x `int`)
            (member t `struct T~2 complete`))
         (declaration a~5 `struct U~4 complete`
            (braced
               123
               (name t~3 `struct T~2 complete`)))
         (declaration p~6 `ptr<struct U~4 complete>` (addressof (name a~5 `struct U~4 complete`)))
         (expression
            (assign
               (dot x
                  (arrow t
                     (name p~6 `ptr<struct U~4 complete>`)))
               5))
         (return
            (dot x
               (dot t
                  (name a~5 `struct U~4 complete`)))))))

----- stderr -----
